; ModuleID = '/home/carl/AnghaBench/lede/target/linux/cns3xxx/files/drivers/net/ethernet/cavium/extr_cns3xxx_eth.c_eth_check_num_used.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/cns3xxx/files/drivers/net/ethernet/cavium/extr_cns3xxx_eth.c_eth_check_num_used.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port = type { %struct.net_device* }
%struct.net_device = type { i32 }
%struct._tx_ring = type { i64, i32 }

@TX_DESCS = common dso_local global i64 0, align 8
@TX_DESC_RESERVE = common dso_local global i64 0, align 8
@switch_port_tab = common dso_local global %struct.port** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._tx_ring*)* @eth_check_num_used to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eth_check_num_used(%struct._tx_ring* %0) #0 {
  %2 = alloca %struct._tx_ring*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.port*, align 8
  %6 = alloca %struct.net_device*, align 8
  store %struct._tx_ring* %0, %struct._tx_ring** %2, align 8
  store i32 0, i32* %3, align 4
  %7 = load %struct._tx_ring*, %struct._tx_ring** %2, align 8
  %8 = getelementptr inbounds %struct._tx_ring, %struct._tx_ring* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @TX_DESCS, align 8
  %11 = load i64, i64* @TX_DESC_RESERVE, align 8
  %12 = sub nsw i64 %10, %11
  %13 = icmp sge i64 %9, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %1
  %16 = load %struct._tx_ring*, %struct._tx_ring** %2, align 8
  %17 = getelementptr inbounds %struct._tx_ring, %struct._tx_ring* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* %3, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  br label %54

22:                                               ; preds = %15
  %23 = load i32, i32* %3, align 4
  %24 = load %struct._tx_ring*, %struct._tx_ring** %2, align 8
  %25 = getelementptr inbounds %struct._tx_ring, %struct._tx_ring* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 8
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %51, %22
  %27 = load i32, i32* %4, align 4
  %28 = icmp slt i32 %27, 4
  br i1 %28, label %29, label %54

29:                                               ; preds = %26
  %30 = load %struct.port**, %struct.port*** @switch_port_tab, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.port*, %struct.port** %30, i64 %32
  %34 = load %struct.port*, %struct.port** %33, align 8
  store %struct.port* %34, %struct.port** %5, align 8
  %35 = load %struct.port*, %struct.port** %5, align 8
  %36 = icmp ne %struct.port* %35, null
  br i1 %36, label %38, label %37

37:                                               ; preds = %29
  br label %51

38:                                               ; preds = %29
  %39 = load %struct.port*, %struct.port** %5, align 8
  %40 = getelementptr inbounds %struct.port, %struct.port* %39, i32 0, i32 0
  %41 = load %struct.net_device*, %struct.net_device** %40, align 8
  store %struct.net_device* %41, %struct.net_device** %6, align 8
  %42 = load i32, i32* %3, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %38
  %45 = load %struct.net_device*, %struct.net_device** %6, align 8
  %46 = call i32 @netif_stop_queue(%struct.net_device* %45)
  br label %50

47:                                               ; preds = %38
  %48 = load %struct.net_device*, %struct.net_device** %6, align 8
  %49 = call i32 @netif_wake_queue(%struct.net_device* %48)
  br label %50

50:                                               ; preds = %47, %44
  br label %51

51:                                               ; preds = %50, %37
  %52 = load i32, i32* %4, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %4, align 4
  br label %26

54:                                               ; preds = %21, %26
  ret void
}

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
